--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,16 +3,11 @@
 #unbind-key C-a
 #bind-key C-a send-prefix
 
-# #use Alt-arrow keys to switch panes
-# bind -n M-h select-pane -L
-# bind -n M-l select-pane -R
-# bind -n M-j select-pane -U
-# bind -n M-k select-pane -D
-
-bind-key h select-pane -L
-bind-key l select-pane -R
-bind-key j select-pane -U
-bind-key k select-pane -D
+#use Alt-arrow keys to switch panes
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-j select-pane -U
+bind -n M-k select-pane -D
 
 #Shift arrow to switch windows
 bind -n M-p previous-window
@@ -25,9 +20,11 @@ bind -n M-n next-window
 #set -g mouse-select-window on
 
 #Set easier window split keys
-bind-key 1 split-window -h
-bind-key 2 split-window -v
+bind-key v split-window -h
+bind-key h split-window -v
 
 
 #Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+set -g default-terminal "screen-256color"
