--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,4 +27,10 @@ bind-key h split-window -v
 #Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
+setw -g xterm-keys on
+
 set -g default-terminal "screen-256color"
+
+# set -g default-terminal "xterm"
+
+set -g status-bg white
