rename tmux.conf make it visiable

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,9 +20,19 @@ bind -n M-n next-window
 #set -g mouse-select-window on
 
 #Set easier window split keys
-bind-key v split-window -h
-bind-key h split-window -v
+bind-key u split-window -h
+bind-key i split-window -v
 
+
+#use Alt-arrow keys to switch panes
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key j select-pane -U
+bind-key k select-pane -D
+
+#Shift arrow to switch windows
+bind-key p previous-window
+bind-key n next-window
 
 #Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
